@@ -61,8 +61,8 @@ def temp_icons(layout_list):
 @pytest.fixture(scope="function")
 def currentlayout_manager(request, layout_list, manager_nospawn):
     # We need to enable the mask here otherwise the widget is just the default qtile one.
-    widget = qtile_extras.widget.currentlayout.CurrentLayoutIcon(
-        **{"use_mask": True, **getattr(request, "param", dict())}
+    widget = qtile_extras.widget.currentlayout.CurrentLayout(
+        **{"use_mask": True, "icon_first": True, **getattr(request, "param", dict())}
     )
 
     class CurrentLayoutConfig(libqtile.confreader.Config):
@@ -98,7 +98,7 @@ def currentlayout_manager(request, layout_list, manager_nospawn):
     indirect=["currentlayout_manager"],
 )
 def test_currentlayouticon_icon_size(currentlayout_manager, expected):
-    info = currentlayout_manager.c.widget["currentlayouticon"].info()
+    info = currentlayout_manager.c.widget["currentlayout"].info()
     assert info["length"] == expected
 
 
