@@ -1,3 +1,5 @@
+2027-07-12: [BREAKING CHANGE] Qtile has removed `CurrentLayoutIcon` as it is now part of
+                              `CurrentLayout`. qtile-extras has been updated to match.
 2027-06-15: [FEATURE] Add `Tetris` widget
 2026-06-10: [RELEASE] v0.32.0 release - compatible with qtile 0.32.0
 2026-06-08: [FEATURE] Add `Pong` widget
